--- a/app/src/main/res/layout/list_item_cliente.xml
+++ b/app/src/main/res/layout/list_item_cliente.xml
@@ -5,6 +5,7 @@
     android:layout_marginTop="12dp"
     android:layout_marginLeft="8dp"
     android:layout_marginRight="8dp"
+    android:padding="16dp"
     android:background="@drawable/list_item_backgraund"
     android:orientation="vertical">
 
