--- a/app/src/main/res/layout-large-port/activity_cliente_mantenimiento.xml
+++ b/app/src/main/res/layout-large-port/activity_cliente_mantenimiento.xml
@@ -17,8 +17,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_weight="40"
-        android:name="com.matiaslugo.obligatorio2021.viewclientes.DetalleClienteComercialFragment"
-        tools:layout="@layout/fragment_particular_cliente_detalle" />
+        android:name="com.matiaslugo.obligatorio2021.viewclientes.DetalleClienteFragment"
+        tools:layout="@layout/fragment_cliente_detalle" />
 
 
 
