--- a/app/src/main/res/layout-large-land/activity_cliente_mantenimiento.xml
+++ b/app/src/main/res/layout-large-land/activity_cliente_mantenimiento.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="horizontal"
     xmlns:tools="http://schemas.android.com/tools">
 
-
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/frgListadoClientes"
         android:layout_width="match_parent"
@@ -21,5 +24,19 @@
         android:layout_height="match_parent"
         android:layout_weight="40"
         tools:layout="@layout/fragment_cliente_detalle" />
+    </LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:onClick="btnOnClickAgregarCliente"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|right"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:backgroundTint="@color/botones"
+        app:srcCompat="@drawable/ic_float_button_add_client"
+        app:tint="@color/black" />
 
-</LinearLayout>
+</RelativeLayout>
