--- a/app/src/main/res/layout-large-port/activity_cliente_mantenimiento.xml
+++ b/app/src/main/res/layout-large-port/activity_cliente_mantenimiento.xml
@@ -1,10 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     xmlns:tools="http://schemas.android.com/tools">
-
+<LinearLayout
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/frgListadoClientes"
         android:layout_width="match_parent"
@@ -19,11 +23,24 @@
         android:layout_weight="40"
         android:name="com.matiaslugo.obligatorio2021.viewclientes.DetalleClienteFragment"
         tools:layout="@layout/fragment_cliente_detalle" />
-
-
-
-
-
-
-
 </LinearLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:onClick="btnOnClickAgregarCliente"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|right"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:backgroundTint="@color/botones"
+        app:srcCompat="@drawable/ic_float_button_add_client"
+        app:tint="@color/black" />
+
+
+
+
+
+
+</RelativeLayout>
