--- a/app/src/main/res/layout/fragment_cliente_detalle.xml
+++ b/app/src/main/res/layout/fragment_cliente_detalle.xml
@@ -19,7 +19,7 @@
         android:id="@+id/tvIdCliente"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="ID: 21"
+        android:freezesText="true"
         android:layout_below="@id/tvTitulo"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"/>
@@ -31,7 +31,7 @@
         android:layout_below="@id/tvIdCliente"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
-        android:text="Nombre" />
+        android:freezesText="true" />
     <TextView
         android:id="@+id/tvRazonSocial"
         android:layout_width="wrap_content"
@@ -39,14 +39,14 @@
         android:layout_below="@id/tvIdCliente"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="26dp"
-        android:text="Razon Social" />
+        android:freezesText="true" />
     <TextView
         android:id="@+id/tvCedula"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvNombreCliente"
         android:layout_centerHorizontal="true"
-        android:text="12344567890"
+        android:freezesText="true"
         android:layout_marginTop="26dp"/>
     <TextView
         android:id="@+id/tvRut"
@@ -54,7 +54,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvNombreCliente"
         android:layout_centerHorizontal="true"
-        android:text="12344567890"
+        android:freezesText="true"
         android:layout_marginTop="26dp"/>
     <TextView
         android:id="@+id/tvDireccion"
@@ -62,7 +62,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvCedula"
         android:layout_centerHorizontal="true"
-        android:text="Esta es una direccion"
+        android:freezesText="true"
         android:layout_marginTop="26dp"/>
     <TextView
         android:id="@+id/tvTelefono"
@@ -70,7 +70,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvDireccion"
         android:layout_centerHorizontal="true"
-        android:text="0999923345"
+        android:freezesText="true"
         android:layout_marginTop="26dp"/>
     <TextView
         android:id="@+id/tvCorreo"
@@ -78,7 +78,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/tvTelefono"
         android:layout_centerHorizontal="true"
-        android:text="correo"
+        android:freezesText="true"
         android:layout_marginTop="26dp"/>
 
 
