--- a/app/src/main/res/layout/activity_listar_eventos.xml
+++ b/app/src/main/res/layout/activity_listar_eventos.xml
@@ -5,7 +5,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".viewseventos.ListarEventos">
-
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:onClick="btnOnClickAgregarEvento"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|right"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:backgroundTint="@color/botones"
+        app:srcCompat="@drawable/ic_float_button_add_client"
+        app:tint="@color/black" />
     <GridView
         android:id="@+id/gvEventos"
         android:layout_width="match_parent"
