--- a/app/src/main/res/layout/activity_crear_evento.xml
+++ b/app/src/main/res/layout/activity_crear_evento.xml
@@ -1,15 +1,133 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="@color/fondoLista"
     tools:context=".viewseventos.CrearEventoActivity">
 
+    <ScrollView
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent">
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="fill_parent">
+
+            <EditText
+                android:id="@+id/etTitulo"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Título"
+                android:layout_marginTop="16dp"
+                android:inputType="text" />
+            <EditText
+                android:id="@+id/etFecha"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/etTitulo"
+                android:clickable="true"
+                android:editable="false"
+                android:hint="Fecha"
+                android:inputType="none"
+                android:onClick="etFechaOnClick"
+                tools:ignore="Deprecated" />
+
+            <EditText
+                android:id="@+id/etHora"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/etFecha"
+                android:clickable="true"
+                android:hint="Hora de Inicio"
+                android:inputType="textNoSuggestions"
+                android:onClick="etHoraOnClick" />
+
+            <LinearLayout
+                android:id="@+id/llDuracion"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/etHora"
+                android:layout_marginTop="16dp"
+
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="5"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="6dp"
+                    android:text="Duración del evento : " />
+
+                <Spinner
+                    android:id="@+id/spDuracion"
+                    android:layout_width="100dp"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/llDuracion"
+                    android:layout_weight="100" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="10"
+                    android:text="Hs." />
+            </LinearLayout>
+
+
+            <EditText
+                android:id="@+id/etAsistentes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/llDuracion"
+                android:hint="Cantidad de Asistentes"
+                android:inputType="number" />
 
 
 
+            <TextView
+                android:id="@+id/tvTipoEvento"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="16dp"
+                android:layout_below="@+id/etAsistentes"
+                android:text="Tipo de Evento" />
+
+            <Spinner
+                android:id="@+id/spTipoEvento"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvTipoEvento"
+                android:entries="@array/tipo_evento"/>
+            <LinearLayout
+                android:id="@+id/llTituloClientes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/spTipoEvento"
+                android:layout_marginTop="16dp">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="Cliente : " />
+            </LinearLayout>
+
+            <Spinner
+                android:id="@+id/spClientes"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/llTituloClientes" />
+
+            <Button
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/spClientes"
+                android:layout_margin="32dp"
+                android:onClick="btnOnClickAgregarEvento"
+                android:text="Agregar" />
 
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        </RelativeLayout>
+    </ScrollView>
+</RelativeLayout>
