--- a/app/src/main/res/layout/fragment_cliente_detalle.xml
+++ b/app/src/main/res/layout/fragment_cliente_detalle.xml
@@ -6,63 +6,81 @@
     tools:context=".viewclientes.DetalleClienteFragment"
     android:gravity="center_horizontal">
 
+    <LinearLayout
+        android:id="@+id/llId"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:layout_marginTop="32dp"
+        android:gravity="center">
+        <TextView
+            android:id="@+id/tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:freezesText="true"
+            android:text="ID del Cliente : "/>
+        <TextView
+            android:id="@+id/tvIdCliente"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:freezesText="true"
+            android:text=""/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvTitulo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Detalle de Cliente Particular"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="34dp" />
 
-    <TextView
-        android:id="@+id/tvIdCliente"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/llTipo"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:freezesText="true"
-        android:layout_below="@id/tvTitulo"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"/>
+        android:gravity="center_horizontal"
+        android:layout_below="@+id/llId"
+        android:layout_marginTop="32dp"
+        android:orientation="vertical">
+        <TextView
+            android:id="@+id/tvNombreCliente"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_below="@id/tvIdCliente"
+            android:freezesText="true"
+            android:textSize="16sp"
+            android:textStyle="bold"/>
+        <TextView
+            android:id="@+id/tvRazonSocial"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_below="@id/tvIdCliente"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:freezesText="true" />
+        <TextView
+            android:id="@+id/tvCedula"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_below="@id/tvNombreCliente"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:freezesText="true" />
+        <TextView
+            android:id="@+id/tvRut"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_below="@id/tvNombreCliente"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            android:layout_centerHorizontal="true"
+            android:freezesText="true"
+            android:layout_marginTop="26dp"/>
+    </LinearLayout>
 
-    <TextView
-        android:id="@+id/tvNombreCliente"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvIdCliente"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
-        android:freezesText="true" />
-    <TextView
-        android:id="@+id/tvRazonSocial"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvIdCliente"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="26dp"
-        android:freezesText="true" />
-    <TextView
-        android:id="@+id/tvCedula"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvNombreCliente"
-        android:layout_centerHorizontal="true"
-        android:freezesText="true"
-        android:layout_marginTop="26dp"/>
-    <TextView
-        android:id="@+id/tvRut"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvNombreCliente"
-        android:layout_centerHorizontal="true"
-        android:freezesText="true"
-        android:layout_marginTop="26dp"/>
     <TextView
         android:id="@+id/tvDireccion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@id/tvCedula"
+        android:layout_below="@id/llTipo"
         android:layout_centerHorizontal="true"
         android:freezesText="true"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:layout_marginTop="26dp"/>
     <TextView
         android:id="@+id/tvTelefono"
@@ -71,6 +89,8 @@
         android:layout_below="@id/tvDireccion"
         android:layout_centerHorizontal="true"
         android:freezesText="true"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:layout_marginTop="26dp"/>
     <TextView
         android:id="@+id/tvCorreo"
@@ -79,7 +99,8 @@
         android:layout_below="@id/tvTelefono"
         android:layout_centerHorizontal="true"
         android:freezesText="true"
+        android:textSize="16sp"
+        android:textStyle="bold"
         android:layout_marginTop="26dp"/>
-
 
 </RelativeLayout>
