--- a/app/src/main/res/layout/activity_reunion_mantenimiento.xml
+++ b/app/src/main/res/layout/activity_reunion_mantenimiento.xml
@@ -1,9 +1,29 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".viewreuniones.ReunionMantenimiento">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floatingActionButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        android:onClick="btnOnClickAgregarReunion"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|right"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        app:backgroundTint="@color/botones"
+        app:srcCompat="@drawable/ic_add"
+        app:tint="@color/black" />
+    <fragment
+        android:id="@+id/frmListadoReuniones"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:name="com.matiaslugo.obligatorio2021.viewreuniones.ListadoReunionFragment"
+        tools:layout="@layout/list_item_reunion" />
+
+</RelativeLayout>
