--- a/app/src/main/res/layout/activity_crear_evento.xml
+++ b/app/src/main/res/layout/activity_crear_evento.xml
@@ -4,22 +4,29 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/fondoLista"
+    android:background="@color/botones"
     tools:context=".viewseventos.CrearEventoActivity">
 
     <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent">
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+      <RelativeLayout
+          android:layout_width="wrap_content"
+          android:layout_height="wrap_content">
         <RelativeLayout
+            android:id="@+id/rlFormulario"
             android:layout_width="match_parent"
-            android:layout_height="fill_parent">
+            android:layout_height="wrap_content"
+            android:background="@drawable/list_item_backgraund"
+            android:layout_margin="20sp"
+            android:padding="16sp">
 
             <EditText
                 android:id="@+id/etTitulo"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="Título"
+                android:fontFamily="@font/segoe"
                 android:layout_marginTop="16dp"
                 android:inputType="text" />
             <EditText
@@ -27,6 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/etTitulo"
+                android:fontFamily="@font/segoe"
                 android:clickable="true"
                 android:editable="false"
                 android:hint="Fecha"
@@ -39,6 +47,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/etFecha"
+                android:fontFamily="@font/segoe"
                 android:clickable="true"
                 android:hint="Hora de Inicio"
                 android:inputType="textNoSuggestions"
@@ -50,7 +59,6 @@
                 android:layout_height="wrap_content"
                 android:layout_below="@id/etHora"
                 android:layout_marginTop="16dp"
-
                 android:orientation="horizontal">
 
                 <TextView
@@ -59,6 +67,8 @@
                     android:layout_weight="5"
                     android:gravity="center_vertical"
                     android:paddingLeft="6dp"
+                    android:fontFamily="@font/segoe"
+                    android:textSize="18sp"
                     android:text="Duración del evento : " />
 
                 <Spinner
@@ -66,15 +76,17 @@
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:layout_below="@id/llDuracion"
+                    android:fontFamily="@font/segoe_b"
                     android:layout_weight="100" />
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:fontFamily="@font/segoe"
+                    android:textSize="14sp"
                     android:layout_weight="10"
-                    android:text="Hs." />
+                    android:text="min." />
             </LinearLayout>
-
 
             <EditText
                 android:id="@+id/etAsistentes"
@@ -92,18 +104,20 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
                 android:layout_below="@+id/etAsistentes"
-                android:text="Tipo de Evento" />
+                android:text="Tipo de Evento: " />
 
             <Spinner
                 android:id="@+id/spTipoEvento"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/segoe_b"
                 android:layout_below="@+id/tvTipoEvento"
                 android:entries="@array/tipo_evento"/>
             <LinearLayout
                 android:id="@+id/llTituloClientes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/segoe"
                 android:layout_below="@id/spTipoEvento"
                 android:layout_marginTop="16dp">
 
@@ -117,17 +131,25 @@
                 android:id="@+id/spClientes"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:fontFamily="@font/segoe_b"
                 android:layout_below="@+id/llTituloClientes" />
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/spClientes"
-                android:layout_margin="32dp"
-                android:onClick="btnOnClickAgregarEvento"
-                android:text="Agregar" />
-
-
         </RelativeLayout>
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:padding="16dp"
+            android:gravity="bottom"
+            android:layout_below="@id/rlFormulario">
+        <Button
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="32dp"
+            android:layout_marginLeft="32dp"
+            android:layout_marginBottom="8dp"
+            android:onClick="btnOnClickAgregarEvento"
+            android:text="Agregar" />
+        </RelativeLayout>
+      </RelativeLayout>
     </ScrollView>
+
 </RelativeLayout>
