--- a/app/src/main/res/layout/activity_crear_reunion.xml
+++ b/app/src/main/res/layout/activity_crear_reunion.xml
@@ -29,12 +29,14 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Fecha..."
+            android:focusable="false"
             android:inputType="text" />
         <EditText
             android:id="@+id/etHora"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Hora..."
+            android:focusable="false"
             android:inputType="text"/>
         <EditText
             android:id="@+id/etLugar"
