--- a/app/src/main/res/layout/list_item_cliente.xml
+++ b/app/src/main/res/layout/list_item_cliente.xml
@@ -2,31 +2,59 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginTop="12dp"
-    android:layout_marginLeft="8dp"
-    android:layout_marginRight="8dp"
-    android:padding="16dp"
+    android:padding="8dp"
+    android:layout_margin="16dp"
     android:background="@drawable/list_item_backgraund"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tvIdCliente"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/black"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="4dp"
+            android:text="ID del cliente: "
+            android:textColor="@color/color_funte_oscuro"
+            android:fontFamily="@font/segoe"
+            android:textSize="18dp"/>
+        <TextView
+        android:id="@+id/tvIdCliente"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/segoe_b"
+            android:textColor="@color/color_funte_oscuro"
         android:layout_marginTop="4dp"
         android:text="Este es El ID"
-        android:textSize="14dp"/>
+        android:textSize="18dp"/>
+    </LinearLayout>
 
-    <TextView
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="4dp"
+            android:textColor="@color/color_funte_oscuro"
+            android:fontFamily="@font/segoe"
+            android:text="Rut/Nombre: "
+            android:textSize="18dp"/>
+        <TextView
         android:id="@+id/tvNombre"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:textColor="@color/black"
+        android:fontFamily="@font/segoe_b"
+            android:textColor="@color/color_funte_oscuro"
         android:layout_marginBottom="4dp"
         android:text="ElNombre va aca"
         android:textSize="18dp"/>
-
+    </LinearLayout>
 
 
 </LinearLayout>
