--- a/app/src/main/res/layout/list_item_evento.xml
+++ b/app/src/main/res/layout/list_item_evento.xml
@@ -3,23 +3,68 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:paddingLeft="8dp"
-    android:paddingRight="8dp">
-    <ImageView
+    android:padding="8dp"
+    android:background="@drawable/list_item_backgraund">
+
+
+        <ImageView
        android:id="@+id/imvAvatar"
-       android:layout_width="wrap_content"
-       android:layout_height="match_parent"/>
+       android:layout_width="@dimen/ancho_avatar"
+       android:layout_height="@dimen/ancho_avatar"/>
+        <LinearLayout
+            android:id="@+id/ll1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
     <TextView
+            android:id="@+id/tv1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/segoe"
+            android:text="Titulo: "/>
+
+        <TextView
         android:id="@+id/tvTitulo"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
-    <TextView
+        android:layout_height="wrap_content"
+            android:fontFamily="@font/segoe_b"
+            android:textStyle="bold"
+        android:text="Titulo"/>
+        </LinearLayout>
+    <LinearLayout
+
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/segoe"
+            android:text="Fecha: "/>
+        <TextView
         android:id="@+id/tvFecha"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
-    <TextView
+        android:layout_height="wrap_content"
+            android:fontFamily="@font/segoe_b"
+        android:text="Fecha"/>
+    </LinearLayout>
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+        <TextView
+            android:id="@+id/tv3"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/segoe"
+            android:text="Hora: "/>
+        <TextView
         android:id="@+id/tvHora"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"/>
+        android:layout_height="wrap_content"
+            android:fontFamily="@font/segoe_b"
+        android:text="hora"/>
+        </LinearLayout>
 
 </LinearLayout>
