--- a/app/src/main/res/menu-large/menu_main.xml
+++ b/app/src/main/res/menu-large/menu_main.xml
@@ -1,34 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
     <item android:id="@+id/mniEventos"
         android:title="Lista de Eventos"
         app:showAsAction="always"
-        android:orderInCategory="1"
         android:icon="@drawable/ic_float_button_event"/>
     <item android:id="@+id/mniClientes"
         android:title="Lista de Clientes"
         app:showAsAction="always"
-        android:orderInCategory="2"
         android:icon="@drawable/ic_float_button_client"/>
-<group>
     <item android:id="@+id/mniModificar"
         android:title="Modificar"
-        app:showAsAction="never" />
+        app:showAsAction="never"
+        android:visible="false"/>
     <item android:id="@+id/mniEliminar"
         android:title="Eliminar"
-        app:showAsAction="never" />
-</group>
-    <group>
+        app:showAsAction="never"
+        android:visible="false"/>
+    <item android:id="@+id/mniTareas"
+        android:title="Ver Tareas"
+        app:showAsAction="never"
+        android:visible="true"/>
     <item android:id="@+id/mniReuniones"
         android:title="Ver Reuniones"
         app:showAsAction="never"
         android:visible="true"/>
-    </group>
-    <item android:title="Más Opciones...">
-        <menu>
+    <item android:id="@+id/mniGastos"
+        android:title="Ver Gastos"
+        app:showAsAction="never"
+        android:visible="true"/>
+    <item android:title="Más Opciones..."
+        android:enabled="false"/>
 
-        </menu>
-
-    </item>
 </menu>
